--- a/src/components/Services.css
+++ b/src/components/Services.css
@@ -35,3 +35,88 @@
   line-height: 25px;
   letter-spacing: 10px;
   }
+
+  .service__card {
+    width: 339px;
+    height: 542px;
+    border-radius: 5px;
+    box-shadow: 3px 4px 12px rgba(0, 0, 0, 0.25);
+    padding: 46px 30px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .service__card--head {
+    height: 139px;
+    width: 100%;
+    margin-bottom: 52px;
+    text-align: center;
+  }
+
+  .service__card--head-title {
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 18.75px;
+  }
+
+  .service__card--head-price {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .service__card--head-price span:nth-child(1) {
+    font-size: 40px;
+    line-height: 50px;
+    font-weight: 700;
+  }
+
+  .service__card--head-price span:nth-child(2) {
+    font-size: 15px;
+    line-height: 18.75px;
+    font-weight: 400;
+    color: #21252980;
+  }
+
+  .service__card--head-desc {
+    font-size: 15px;
+    line-height: 18.75px;
+    font-weight: 400;
+    color: #21252980;
+    text-align: center;
+  }
+
+  ul.service__card--features {
+    margin-bottom: 45px;
+  }
+
+  ul.service__card--features li {
+    list-style: none;
+    display: flex;
+  }
+
+  .icon__features {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 25px;
+    height: 25px;
+  }
+
+  .icon__features svg {
+    color: #74C69D;
+    width: 18px;
+    height: auto;
+  }
+
+  ul.service__card--features li span {
+    font-size: 15px;
+    line-height: 18.75px;
+    font-weight: 400;
+  }
+
+  .service__button {
+    margin-inline: auto;
+  }
