--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -35,3 +35,82 @@
   line-height: 25px;
   letter-spacing: 10px;
   }
+
+  .contact__row {
+    display: flex;
+    justify-content: space-between;
+    margin-inline: auto;
+  }
+
+  .contact__row-1 {
+    align-self: center;
+  }
+
+  .contact__row-1 form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 24px;
+    width: 575px
+  }
+
+  .contact__row-1 form input {
+    height: 38px;
+    width: 100%;
+    border: 1px solid #000000;
+    background-color: #74C69D25;
+    border-radius: 5px;
+    padding: 8px 16px;
+  }
+
+  .contact__row-1 form textarea {
+    height: 75px;
+    width: 100%;
+    border: 1px solid #000000;
+    background-color: #74C69D25;
+    border-radius: 5px;
+    padding: 8px 16px;
+  }
+
+  .contact__row-2 {
+    max-width: 575px;
+    min-width: 500px;
+    align-self: center;
+  }
+
+  .contact__row-2 iframe {
+    width: 100%;
+    border: 0;
+    margin-inline: auto;
+  }
+
+  .contact__button {
+    width: 100%;
+    height: 48px;
+    background-color: #212529;
+    border-radius: 5px;
+    font-size: 20px;
+    line-height: 48px;
+    text-align: center;
+    color: #ffffff;
+  }
+
+  @media (max-width: 768px){
+    .contact__row {
+      display: flex;
+      flex-direction: column-reverse;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
+
+    .contact__row-1, .contact__row-2 {
+      width: 100%;
+      max-width: 100%;
+    min-width: 100%;
+    height: max-widtheight cs;
+    }
+
+    .contact__row-2 iframe {
+      width: 100%;
+    }
+  }
