--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -40,6 +40,7 @@
     display: flex;
     justify-content: space-between;
     margin-inline: auto;
+    margin-bottom: 89px;
   }
 
   .contact__row-1 {
@@ -101,6 +102,7 @@
       flex-direction: column-reverse;
       justify-content: space-between;
       flex-wrap: wrap;
+      margin-bottom: 50px;
     }
 
     .contact__row-1, .contact__row-2 {
